--- a/mysql.env
+++ b/mysql.env
@@ -1,4 +1,4 @@
 MYSQL_ROOT_PASSWORD=sOmErAnDoMsTuFF
-MYSQL_DATABASE=airflow
-MYSQL_USER=airflow
-MYSQL_PASSWORD=airflow
+MYSQL_DATABASE=inference_db
+MYSQL_USER=inference_user
+MYSQL_PASSWORD=inference_pass
